2009-04-27  Johannes Schmid <jschmid@openismus.com>

  * gtk/src/statusicon.ccg:
  Reference the returned statusicon because the RefPtr becomes invalid
  otherwise (#575268)

2009-04-18  Daniel Elstner  <danielk@openismus.com>

	* docs/reference/images/stock: Add these stock images to the repository for
	now to unbreak the build since we can no longer use svn:external.  It's
	probably worth looking for a better way to do this in the future.

2009-03-26  Daniel Elstner  <danielk@openismus.com>

	* gtk/src/notebook.ccg (PageList::PageList cctor): Oops. Fix silly
	mistake that broke the build.

2009-03-26  Daniel Elstner  <danielk@openismus.com>

	* configure.ac: Rename from configure.in.
	* autogen.sh: Fix reference to configure.in.
	* MSVC_Net2005/glibmm/Makefile.am: ditto,
	* MSVC_Net2005/giomm/Makefile.am: ditto,
	* MSVC_Net2008/glibmm/Makefile.am: ditto,
	* MSVC_Net2008/giomm/Makefile.am: ditto.

2009-03-26  Daniel Elstner  <danielk@openismus.com>

	* scripts/dk-warn.m4: New file defining DK_ARG_ENABLE_WARNINGS().
	* scripts/macros.m4: Remove the old GTKMM_ARG_ENABLE_WARNINGS().
	* configure.in: Use new macro DK_ARG_ENABLE_WARNINGS() to set the
	Makefile variable $(GLIBMM_WXXFLAGS).
	* build_shared/Makefile_build.am_fragment (all_includes): Insert
	$(GLIBMM_WXXFLAGS).  Also move deprecation flags here.
	* tools/extra_defs_gen/Makefile.am (INCLUDES): Insert
	$(GLIBMM_WXXFLAGS).
	* demos/Makefile.am (all_includes): ditto,
	* demos/gtk-demo/Makefile.am (all_includes): ditto,
	* tests/Makefile.am_fragment (INCLUDES): ditto.

2009-03-26  Daniel Elstner  <danielk@openismus.com>

	* gtk/src/messagedialog.ccg (MessageDialog::set_secondary_text):
	Fix nasty security hole discovered by GCC:  A non-literal was
	used as a varargs format string.
	* gtk/src/notebook.ccg: Spring cleaning.
	(PageList::find): Fix broken loop end condition discovered by
	GCC.  Replace the whole thing by std::advance().
	* gtk/src/calendar.ccg (SignalProxy_Details_gtk_callback): Remove