@@ -35,21 +35,60 @@ struct BuiltinStockID;
 class StockID
 {
 public:
+  /** Create an empty StockID
+   */
   StockID(); //TODO: This was added for Action::Action, but there might be a better way to do this.
+
+  /** Create a StockID from one of the build-in stock ids.
+   *
+   * See also Gtk::BuildinStockID.
+   */
   StockID(const BuiltinStockID& id);
+
+  /** Create a StockID from its string representation.
+   * @param id string representation of the stock id. Usually something like "gtk-about".
+   */
   explicit StockID(const Glib::ustring& id);
-  explicit StockID(const char* id); // id can be 0
+
+  /** Create a StockID from its string representation.
+   * @param id string representation of the stock id. Usually something like "gtk-about".
+   *
+   * If id is 0 an empty StockID will be created.
+   */  
+  explicit StockID(const char* id);
   ~StockID();
 
+  /** Create a StockID as copy from another.
+   * @param other: StockID to copy.
+   */
   StockID(const StockID& other);
+
+  /** Check if the StockIDs are equal.
+   * @param other Another StockID.
+   */
   StockID& operator=(const StockID& other);
 
-  /// Tests whether the StockID is not empty.
+  /** Tests whether the StockID is not empty.
+   */
   operator bool() const;
 
+  /** Check if two StockIDs are equal.
+   * @param rhs Another StockID.
+   *
+   * @return <tt>true</tt> if both ids equal - <tt>false</tt> otherwise.
+   */
   bool equal(const StockID& rhs) const;
 
+  /** Get the string representation of the StockID.
+   *
+   * @return something like "gtk-about".
+   */
   Glib::ustring get_string() const;
+
+  /** Get the string representation as a const gchar*.
+   *
+   * @return string representation as const gchar*.
+   */
   const char*   get_c_str()  const;
 
 protected:
