@@ -57,6 +57,15 @@ public:
 
   Glib::ArrayHandle<IconSize> get_sizes() const;
 
+  /** Looks for an icon in the list of default icon factories.
+   * @param stock_id StockID to search for
+   *
+   * For display to the user, you should use Style::lookup_icon_set() on the Style 
+   * for the widget that will display the icon, instead of using this function directly, 
+   * so that themes are taken into account
+   *
+   * @returns an IconSet
+   */
   static IconSet lookup_default(const Gtk::StockID& stock_id);
 };
 
