@@ -1,9 +1,18 @@
+2009-04-28  Johannes Schmid <jschmid@openismus.com>
+
+  * gtk/gtkmm/stock.h:
+  * gtk/gtkmm/stockitem.h:
+  * gtk/src/iconset.hg:
+  506885 – Stock ID stuff needs documentation
+  
+  Document as much as there is information available from the Gtk+ documentation
+
 2009-04-27  Johannes Schmid <jschmid@openismus.com>
 
   * gtk/src/statusicon.ccg:
   Reference the returned statusicon because the RefPtr becomes invalid
   otherwise (#575268)
-
+  
 2009-04-18  Daniel Elstner  <danielk@openismus.com>
 
 	* docs/reference/images/stock: Add these stock images to the repository for
